# OpenCogLojbanSyntax

./: README.md  hsbracket.c  opencog-lojban.cabal  run.sh  stack.yaml  tags
app/: Main.hs
app/Main/: Lojban.hs
src/OpenCog/: Lojban.hs
src/OpenCog/Lojban/: Selmaho.hs  Syntax.hs  Util.hs  WordList.hs
src/OpenCog/Lojban/Syntax/: AtomUtil.hs  Util.hs
test/: Main.hs  Test.hs
