name:                opencog-lojban
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/new-template#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OpenCog.Lojban
  other-modules:       OpenCog.Lojban.Syntax
                       , OpenCog.Lojban.Selmaho
                       , OpenCog.Lojban.Util
  build-depends:       base >= 4.7 && < 5
                       , opencog-atomspace
                       , invertible-syntax
                       , partial-isomorphisms
                       , cereal
                       , bytestring
                       , random
                       , containers
                       , transformers
  c-sources:           hsbracket.c
  ghc-options:         -dynamic -shared -fPIC
  extra-libraries:     HSrts-ghc7.10.2
  default-language:    Haskell2010
