name:                opencog-lojban
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/new-template#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OpenCog.Lojban
  other-modules:       OpenCog.Lojban.Syntax
                       , OpenCog.Lojban.Util
  build-depends:       base >= 4.7 && < 5
                       , opencog-atomspace
                       , invertible-syntax
                       , partial-isomorphisms
                       , cereal
                       , bytestring
                       , random
                       , containers
                       , transformers
  default-language:    Haskell2010

executable lojbanChatBot
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Main.Atoms
                     , Main.Lojban
  build-depends:       base
                     , opencog-atomspace
                     , opencog-lojban
                     , transformers
                     , hxt
                     , containers
  default-language:    Haskell2010

