name:                opencog-lojban
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/new-template#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OpenCog.Lojban
  other-modules:       OpenCog.Lojban.Syntax
                       , OpenCog.Lojban.Util
                       , OpenCog.Lojban.WordList
  build-depends:       base >= 4.7 && < 5
                       , opencog-atomspace
                       , invertible-syntax
                       , partial-isomorphisms
                       , cereal
                       , bytestring
                       , random
                       , containers
                       , transformers
                       , hxt
                       , split
  default-language:    Haskell2010

executable lojbanChatBot
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Main.Atoms
  build-depends:       base
                     , opencog-atomspace
                     , opencog-lojban
                     , transformers
                     , containers
  default-language:    Haskell2010

Test-Suite lojban-test
  hs-source-dirs:      test
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , opencog-atomspace
                     , opencog-lojban
  default-language:    Haskell2010
  ghc-options:      -threaded
